--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amplop Cinta</title>
+  <title>AndreeGanteng</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="letter">
           <div class="text">
             <strong>For You</strong>
-            <button onclick="window.location.href='/lop/index.html'">habis baca klik ini</button>
+            <button onclick="window.location.href='/alib/lop/index.html'">habis baca klik ini</button>
             <p>
               akuuu cuma mau jujur... belakangan ini kmuuu tuuu sering bangettt yaa nongkrong di kepalaa akuu. kaya lagu yang gaa bisa aku skipp, kamu slaluu berhasil bikin hari akkuu lebih cerah cuma dari senyuman kamu padahall cumaa liatt darii fotoo doang whehwehhwhe.
               <br><br>
