--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
           <div class="text">
             <strong>For You</strong>
             <button onclick="window.location.href='/alib/lop/index.html'">habis baca klik ini</button>
-            <p>
-              akuuu cuma mau jujur... belakangan ini kmuuu tuuu sering bangettt yaa nongkrong di kepalaa akuu. kaya lagu yang gaa bisa aku skipp, kamu slaluu berhasil bikin hari akkuu lebih cerah cuma dari senyuman kamu padahall cumaa liatt darii fotoo doang whehwehhwhe.
-              <br><br>
-              honestlyy, I think I’m falling for uuuuu, pelan-pelan tapi pasti hwwehwhe. kmuuu itu beda. kmmu punya vibe yang susah dijelasin, tapi bikin nyaman buangettt.
-              <br><br>
-              aku cuma pengen kamu tau, kloo suatu hari nanti kamu butuh seseorang niii yang bakal support kamu sepenuhnya, dengerin cerita kamu tanpa bosen, and make you feel safe… I’ll be here. for realllll.
+            <p>Maaf ya Aliesha, I didn’t mean to make you feel bad or ruin your mood. Aku sadar banget mungkin tadi aku nyebelin or ngomongnya nggak enak. Honestly, I feel super bad about it. You don’t deserve to feel that way, apalagi karena aku. Kalau bisa diulang, I’d totally handle it differently. Please don’t stay upset too long, ya? I miss your happy vibes already 
             </p>
           </div>
         </div>
