--- a/lop/index.html
+++ b/lop/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <div class="greetings">
-      <span>B</span>
-      <span>I</span>
+      <span>A</span>
       <span>L</span>
-      <span>A</span>
-      <span>A</span>
+      <span>I</span>
+      <span>E</span>
+      <span>SHA</span>
     </div>
     <div class="description">
       <span>flowers for BEAUTIFUL girls</span>
