--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="letter">
           <div class="text">
             <strong>For You</strong>
-            <button onclick="window.location.href='/alib/lop/index.html'">habis baca klik ini</button>
+            <button onclick="window.location.href='lop/index.html'">habis baca klik ini</button>
             <p>Maaf ya Aliesha, I didn’t mean to make you feel bad or ruin your mood. Aku sadar banget mungkin tadi aku nyebelin or ngomongnya nggak enak. Honestly, I feel super bad about it. You don’t deserve to feel that way, apalagi karena aku. Kalau bisa diulang, I’d totally handle it differently. Please don’t stay upset too long, ya? I miss your happy vibes already 
             </p>
           </div>
